Extended extension commands and reporters to cover nearly all available extension apis.
Extended tests to run in both mocked (local unit tests) and as integration tests (executing local NetLogo install).

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
           <systemPath>${netlogo-home}/NetLogo.jar</systemPath>
       </dependency>
       <dependency>
+          <groupId>org.netlogo</groupId>
+          <artifactId>netlogo-scala</artifactId>
+          <version>5.0.1</version>
+          <scope>system</scope>
+          <systemPath>${netlogo-home}/lib/scala-library.jar</systemPath>
+      </dependency>
+      <dependency>
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
           <version>4.8.1</version>
@@ -60,6 +67,31 @@
         </testResource>
     </testResources>
     <plugins>
+	<plugin>
+        <groupId>org.eclipse.m2e</groupId>
+        <artifactId>lifecycle-mapping</artifactId>
+        <version>1.0.0</version>
+        <configuration>
+            <lifecycleMappingMetadata>
+                <pluginExecutions>
+                    <pluginExecution>
+                        <pluginExecutionFilter>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-dependency-plugin</artifactId>
+                            <version>2.4</version>
+                            <goals>
+                                <goal>copy-dependencies</goal>
+                                <goal>unpack</goal>
+                            </goals>
+                        </pluginExecutionFilter>
+                        <action>
+                            <ignore />
+                        </action>
+                    </pluginExecution>
+                </pluginExecutions>
+            </lifecycleMappingMetadata>
+        </configuration>
+    </plugin>    
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
