--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ drools-extension.iml
 drools-netlogo-plugin.iml
 src/main/resources/.DS_Store
 src/test/resources/.DS_Store
+.settings/
+src/main/java/mx/ecosur/netlogo/extensions/drools/helper/
+target/
+.classpath
+.project
