--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>1.0.0-SNAPSHOT</version>
   <properties>
       <netlogo-home>/Applications/NetLogo 5.0.1</netlogo-home>
-      <drools-version>5.4.0.Beta2</drools-version>
+      <drools-version>5.4.0.Final</drools-version>
   </properties>
   <dependencies>
       <dependency>
